--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 #chart {
-  height: 650px; */must at least match the svg, to place content after it!*/
+  height: 650px; /* must at least match the svg, to place content after it!*/
 }
 
 .node rect {
